# syllogic-agent

./: .env.example  .gitignore  AGENTIC_FLOW_ARCHITECTURE.md  CLAUDE.md  Makefile  pyproject.toml  pytest.ini  start_server.sh  temp_langfuse_text_block_prompt.md
.claude/: settings.local.json
examples/: langfuse_dynamic_prompts_demo.py
src/: config.py
src/actions/: __init__.py  chats.py  dashboard.py  database_operations.py  e2b_sandbox.py  graph_helpers.py  jobs.py  messages.py  prompts.py  setup_langfuse_prompts.py  tasks.py  utils.py  widget_ordering.py  widgets.py
src/agent/: __init__.py  graph.py  models.py
src/agent/agents/: __init__.py
src/agent/agents/top_level_coordinator/: __init__.py  top_level_coordinator.py
src/agent/agents/top_level_coordinator/tools/: __init__.py  task_manager.py
src/agent/agents/top_level_supervisor/: __init__.py  main.py  structured_output.py  top_level_supervisor.py
src/agent/agents/top_level_supervisor/tools/: __init__.py  data_reader.py  database_operations.py  task_manager.py
src/agent/agents/widget_agent_team/: README.md  __init__.py  data_agent.py  database_agent.py  main.py  text_block_agent.py  validation_agent.py  widget_supervisor.py  worker_nodes.py
src/agent/agents/widget_agent_team/tools/: __init__.py  code_execution.py  code_generation.py  code_generation_and_execution.py  data_processing.py  fetch_data.py  fetch_widget.py  widget_data_fetcher.py  (+1 more)
src/agent/tools/: __init__.py  data_analyzer.py  data_fetcher.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: conftest.py  test_chats.py  test_configuration.py  test_dashboard.py  test_import_utils.py  test_jobs.py  test_messages.py  test_tasks.py  test_utils.py
